--- a/Quanlicaan/Quanlicaan/Views/Web.config
+++ b/Quanlicaan/Quanlicaan/Views/Web.config
@@ -40,4 +40,11 @@
       </assemblies>
     </compilation>
   </system.web>
+
+	<connectionStrings>
+		<add name="DatabaseMVC5" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=DatabaseMVC5;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\DatabaseMVC5.mdf" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+
 </configuration>
+
+
