--- a/Quanlicaan/Quanlicaan.csproj
+++ b/Quanlicaan/Quanlicaan.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Code\SessionHelper.cs" />
     <Compile Include="Code\UserSession.cs" />
+    <Compile Include="Controllers\DkicaanController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RegistController.cs" />
@@ -198,6 +199,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Regist\Create.cshtml" />
+    <Content Include="Views\Dkicaan\CaNhan.cshtml" />
+    <Content Include="Views\Dkicaan\TapThe.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
