--- a/Quanlicaan/Web.config
+++ b/Quanlicaan/Web.config
@@ -65,5 +65,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
-  </entityFramework>.
+  </entityFramework>
 </configuration>
