--- a/Quanlicaan/Quanlicaan/Quanlicaan.csproj
+++ b/Quanlicaan/Quanlicaan/Quanlicaan.csproj
@@ -18,7 +18,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Quanlicaan</RootNamespace>
     <AssemblyName>Quanlicaan</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
@@ -501,6 +501,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Models\LoginModel.cs" />
+    <Compile Include="Models\Framework\CaAn.cs" />
+    <Compile Include="Models\Framework\ChiTietSuatAn.cs" />
     <Compile Include="Code\SessionHelper.cs" />
     <Compile Include="Code\UserSession.cs" />
     <Compile Include="Controllers\BaocaoController.cs" />
@@ -512,23 +515,20 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Framework\Model1.cs" />
     <Compile Include="Models\UserModel.cs" />
-    <Compile Include="Models\Frameworks\CaAn.cs" />
-    <Compile Include="Models\Frameworks\ChiTietSuatAn.cs" />
-    <Compile Include="Models\Frameworks\LoginModel.cs" />
-    <Compile Include="Models\Frameworks\Model1.cs" />
-    <Compile Include="Models\Frameworks\NhanVien.cs" />
-    <Compile Include="Models\Frameworks\PhongBan.cs" />
-    <Compile Include="Models\Frameworks\Role.cs" />
-    <Compile Include="Models\Frameworks\SuatAn.cs" />
-    <Compile Include="Models\Frameworks\sysdiagram.cs" />
+    <Compile Include="Models\Framework\NhanVien.cs" />
+    <Compile Include="Models\Framework\PhongBan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource1.resx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Framework\Role.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <Compile Include="Models\Framework\SuatAn.cs" />
+    <Compile Include="Models\Framework\sysdiagram.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -554,6 +554,7 @@
     <Content Include="css\dangkyannhom.css" />
     <Content Include="css\layout.css" />
     <Content Include="css\login.css" />
+    <Content Include="css\nv.css" />
     <Content Include="css\regist.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\OFL.txt" />
