--- a/Quanlicaan/Quanlicaan/Quanlicaan.csproj
+++ b/Quanlicaan/Quanlicaan/Quanlicaan.csproj
@@ -501,11 +501,11 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Models\LoginModel.cs" />
+    <Compile Include="Controllers\CaAnController.cs" />
     <Compile Include="Models\Framework\CaAn.cs" />
     <Compile Include="Models\Framework\ChiTietSuatAn.cs" />
-    <Compile Include="Code\SessionHelper.cs" />
-    <Compile Include="Code\UserSession.cs" />
+    <Compile Include="Models\Framework\Model1.cs" />
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Controllers\BaocaoController.cs" />
     <Compile Include="Controllers\DangkycaanController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -515,7 +515,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Framework\Model1.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Models\Framework\NhanVien.cs" />
     <Compile Include="Models\Framework\PhongBan.cs" />
@@ -647,7 +646,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Home.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Baocao\Baocaocanhan.cshtml" />
     <Content Include="Views\Baocao\baocaotheongay.cshtml" />
@@ -659,9 +658,12 @@
     <Content Include="Views\NhanVien\EditNV.cshtml" />
     <Content Include="Views\NhanVien\AddNV.cshtml" />
     <Content Include="Views\NhanVien\Delete.cshtml" />
+    <Content Include="Views\Dangkycaan\Canhan.cshtml" />
+    <Content Include="Views\CaAn\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Code\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
