--- a/Quanlicaan/Quanlicaan/Quanlicaan.csproj
+++ b/Quanlicaan/Quanlicaan/Quanlicaan.csproj
@@ -501,9 +501,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\CaAnController.cs" />
     <Compile Include="Models\Framework\CaAn.cs" />
     <Compile Include="Models\Framework\ChiTietSuatAn.cs" />
+    <Compile Include="Controllers\CaAnController.cs" />
     <Compile Include="Models\Framework\Model1.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Controllers\BaocaoController.cs" />
@@ -515,6 +515,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ModelADO\CaAn.cs" />
+    <Compile Include="Models\ModelADO\Chitietsuatan.cs" />
+    <Compile Include="Models\ModelADO\NhanVien.cs" />
+    <Compile Include="Models\ModelADO\PhongBan.cs" />
+    <Compile Include="Models\ModelADO\Roles.cs" />
+    <Compile Include="Models\ModelADO\SuatAn.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Models\Framework\NhanVien.cs" />
     <Compile Include="Models\Framework\PhongBan.cs" />
